# fitness-rl

./: .gitignore  README.md  app.py  inference.py  pyproject.toml  requirements.txt
server/: app.py
wellness_env/: __init__.py  env.py  models.py  payoff.py  personas.py  simulator.py
